--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "dulce_tentacion",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,22 +11,27 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "axios": "^1.13.2",
+    "lucide-react": "^0.555.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.9.4",
+    "router-dom": "^3.0.3",
     "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
-    "@types/react": "^19.1.13",
+    "@types/node": "^24.6.0",
+    "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react-swc": "^4.1.0",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
+    "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.44.0",
+    "typescript": "~5.9.3",
+    "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7"
   }
 }
